fix: cash column width 100 not to wrap text

--- a/src/app/components/sheets/tara/tara-sheet.component.css
+++ b/src/app/components/sheets/tara/tara-sheet.component.css
@@ -208,5 +208,6 @@ span.negative {
 }
 
 .diffCash {
+  min-width: 100px;
   font-size: 0.8em;
 }
