--- a/src/app/components/tabs/tara/tara-sheet.component.css
+++ b/src/app/components/tabs/tara/tara-sheet.component.css
@@ -37,7 +37,7 @@ th.name {
 }
 
 th.diff {
-  min-width: 81px !important;
+  min-width: 101px !important;
   border: 1px solid lightgray !important;
 }
 
